# go-risk-it

./: .gitignore  .golangci.yaml  .mockery.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  map.json  pyproject.toml  renovate.json  sqlc.yaml
.sourcegraph/: cody.json
component-test/: .env  README.md  pyproject.toml
component-test/features/: environment.py  game.feature  lobby.feature  tutorial.feature
component-test/features/src/api/: board_state_message.py  card_state_message.py  game_state_message.py  move_history_message.py  player_state_message.py  subscribe_message.py
component-test/features/src/client/: http_client.py  prefix_session.py  supabase_client.py  websocket_manager.py
component-test/features/src/client/rest/: client.py  prefix_session.py
component-test/features/src/client/websockets/: manager.py
component-test/features/src/core/: context.py  player.py  runner.py  user.py
component-test/features/src/game/api/: board_state_message.py  card_state_message.py  game_state_message.py  games.py  mission_state_message.py  player_state_message.py
component-test/features/src/lobby/api/: lobbies.py  lobby_state_message.py
component-test/features/steps/: attack.py  auth.py  cards.py  connection.py  conquer.py  deploy.py  game.py  lobby.py  lobby_creation.py  player.py  reinforce.py  tutorial.py
component-test/features/util/: client.py  context.py  http_assertions.py  readiness.py
component-test/generation/: domain.py  fluents.py  generate.py  problem.py  shortcuts.py  user_types.py
(+740 files in other folders)
