[tool.poetry]
name = "component-test"
version = "0.1.0"
description = ""
authors = ["Giovanni Zotta <giovannizotta771@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
requests = "^2.31.0"
pyhamcrest = "^2.1.0"
websocket-client = "^1.7.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
